# kimera_swm_toy

./: .codespellrc  ALL_GREEN_SUMMARY.md  ASYNC_IMPLEMENTATION.md  BENCHMARK_FEATURES.md  BOOTSTRAP_CI_FIX_SUMMARY.md  CACHE_FIXES_APPLIED.md  CACHE_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  COMMIT_SUMMARY.md  COMPLETE_TEST_RESULTS.md  CRITICAL_SECURITY_AUDIT.md  CURRENT_DEVELOPMENT_STATUS.md  CURRENT_STATUS_SUMMARY.md  ECHOFORM_THERMODYNAMICS_INTEGRATION.md  EXPERIMENT_COMMANDS.md  FINAL_CLEANUP_PLAN.md  FINAL_FIXES_APPLIED.md  FINAL_FIXES_SUMMARY.md  FINAL_PIPELINE_STATUS.md  FINAL_RESOLUTION_SUMMARY.md  FINAL_SECURITY_ASSESSMENT.md  FINAL_STABILIZATION_STATUS.md  FINAL_STATUS.md  FINAL_STATUS_SUMMARY.md  FIXES_APPLIED.md  GEOID_CONSTRUCTOR_FIXES.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENT_CRITICAL_FIXES.py  IMPORT_FIXES_COMPLETE.md  ISSUES_RESOLVED_SUMMARY.md  KIMERA_COMPLETE_GUIDE.md  KIMERA_SWM_READY.md  MANUAL_FIX_COMMANDS.md  METRICS_IMPLEMENTATION_SUMMARY.md  Makefile  NEGATION_FIX_IMPLEMENTATION.md  OPTIMIZATION_ROADMAP.md  P0_FIXES_COMPLETE.md  P0_IMPLEMENTATION_SUMMARY.md  P0_STATUS_SUMMARY.md  (+337 more)
.cache/: embeddings.joblib
.github/: workflows_backup
_nocache_temp/: embeddings.joblib
benchmarks/: honest_benchmark.py  llm_compare.py  metric_runner.py  openai_async.py  resonance_benchmark.py
config/: translation_config.yaml
data/: contradictions_2k.csv  contradictions_offline.csv  mixed_5k.csv  mixed_contradictions.csv  mixed_quick.csv  toy_contradictions.csv
docs/: DEVELOPMENT.md  HONEST_README.md  KIMERA_IMPROVEMENT_PLAN.md  LEADING_ROADMAP.md  (+14 more)
(+481 files in other folders)
